[TRV-1513] correctly aligned the brand names columns

--- a/src/main/webapp/bundles/travel/less/dropdown.less
+++ b/src/main/webapp/bundles/travel/less/dropdown.less
@@ -66,7 +66,8 @@
     color: @gray-light;
   }
 
-  .travel-filters-cover-tabs {
+  .col-brand {
+    padding-left: 0;
     padding-right: 0;
   }
 }
